gccida/g0/combine_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2322:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)subreg + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2324:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)usedreg + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2377:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)usedreg + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2378:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)usedreg + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2411:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)subreg_0 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2413:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)setreg + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2466:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)setreg + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2467:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)setreg + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2480:42: error: use of undeclared identifier 'qty_0'
|| ssize > usize && ureg > 52 && usize < qty_0[*( ( int *)reg_qty + ureg)].size 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2510:29: error: use of undeclared identifier 'qty_0'
&& reg_meets_class_p( sreg, qty_0[*( ( int *)reg_qty + ureg)].min_class) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2515:41: error: use of undeclared identifier 'qty_0'
*( ( _DWORD *)reg_next_in_qty + sreg) = qty_0[sqty].first_reg; 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2516:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].first_reg = sreg; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2518:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].n_calls_crossed += *( _DWORD *)( reg_n_info->data.l[sreg] + 32); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2519:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].n_refs += *( _DWORD *)( reg_n_info->data.l[sreg] + 16); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2520:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].freq += *( _DWORD *)( reg_n_info->data.l[sreg] + 20); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2523:11: error: use of undeclared identifier 'qty_0'
for ( i = qty_0[sqty].first_reg; i >= 0; i = *( ( _DWORD *)reg_next_in_qty + i) ) 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2525:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].size = ssize; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/local-alloc.c:2526:1: error: use of undeclared identifier 'qty_0'
qty_0[sqty].mode = *( ( unsigned __int8 *)setreg + 2); 
^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_regs/src/obj/local-alloc.o] Error 1
